--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "apexcharts": "^3.35.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
