--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.15"
   }
 }
