--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.7.3-alpha.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
